--- a/Clase_2/Repaso Parcial 1/Repaso_semana2.ipynb
+++ b/Clase_2/Repaso Parcial 1/Repaso_semana2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "Text(0.5, 1.0, 'Aproximacion final: 27.928')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -120,10 +120,40 @@
    "source": [
     "#np.arange funciona de forma similar, solo que el ultimo valor es el paso que se da entre\n",
     "#indices del array\n",
-    "\n",
-    "x =np.arange(0,10,1)\n",
-    "print(x)"
+    "y =np.arange(0,10,1)\n",
+    "print(y)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([2, 3, 4, 5, 6, 7, 8, 9], dtype=int64),)\n",
+      "(array([2], dtype=int64),)\n"
+     ]
+    }
+   ],
+   "source": [
+    "##np.where() se manda como parametro el array con una condicion que se quiere cumplir \n",
+    "##y esto devuelve los valores que dentro del array cumplen la condicion \n",
+    "##np.amin() devueleve el valor minimo de un array\n",
+    "\n",
+    "print(np.where(y > 1))\n",
+    "\n",
+    "print(np.where(y == np.amin(np.where(y > 1))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
