--- a/Clase_2/Repaso Parcial 1/Repaso_semana2.ipynb
+++ b/Clase_2/Repaso Parcial 1/Repaso_semana2.ipynb
@@ -145,7 +145,9 @@
     "\n",
     "print(np.where(y > 1))\n",
     "\n",
-    "print(np.where(y == np.amin(np.where(y > 1))))"
+    "print(np.where(y == np.\n",
+    "\n",
+    "amin(np.where(y > 1))))"
    ]
   },
   {
