--- a/Parcial 3/EjerciciosParcial3.ipynb
+++ b/Parcial 3/EjerciciosParcial3.ipynb
@@ -24,6 +24,7 @@
     "import sympy as sym\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
+    "sym.init_printing(use_unicode=True)\n",
     "\n",
     "x = sym.Symbol('x')\n",
     "y = sym.Symbol('y')\n",
@@ -136,11 +137,51 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Algebra Lineal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ejercicio 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 310,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+       "       [0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+       "       [0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+       "       [0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j]])"
+      ]
+     },
+     "execution_count": 310,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = 1*1j\n",
+    "gam0 = np.array([[1,0,0,0],[0,1,0,0],[0,0,-1,0],[0,0,0,-1]])\n",
+    "gam1 = np.array([[0,0,0,1],[0,0,1,0],[0,-1,0,0],[-1,0,0,0]])\n",
+    "gam2 = np.array([[0,0,0,-c],[0,0,c,0],[0,c,0,0],[-c,0,0,0]])\n",
+    "gam3 = np.array([[0,0,1,0],[0,0,0,-1],[-1,0,0,0],[0,1,0,0]])\n",
+    "\n",
+    "nuv = np.array([[+1,0,0,0],[0,-1,0,0],[0,0,-1,0],[0,0,0,-1]])\n",
+    "I4 = np.array([[1,0,0,0],[0,1,0,0],[0,0,1,0],[0,0,0,1]])\n",
+    "\n",
+    "np.dot(gam1,gam2) + np.dot(gam2,gam1)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
