--- a/Parcial 3/EjerciciosParcial3.ipynb
+++ b/Parcial 3/EjerciciosParcial3.ipynb
@@ -559,6 +559,68 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Ejercicio 15"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n",
+      "[[ True  True]\n",
+      " [ True  True]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Levi_Civita(i,j):\n",
+    "    if (i ==1 and j == 2) or (i ==2 and j == 3) or (i ==3 and j == 1): \n",
+    "        return 1\n",
+    "    elif (i ==3 and j == 2) or (i ==1 and j == 3) or (i ==2 and j == 1):\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
+    "\n",
+    "\n",
+    "sigma = np.array([[[0,1],[1,0]],\n",
+    "                  [[0,-1j],[1j,0]],\n",
+    "                  [[1,0],[0,-1]]])\n",
+    "for i in range(1,4):\n",
+    "    for j in range(1,4):\n",
+    "        A_B = np.dot(sigma[i-1],sigma[j-1]) - np.dot(sigma[j-1],sigma[i-1])\n",
+    "        Le = Levi_Civita(i,j)\n",
+    "        k = (i+j) % 4\n",
+    "        if k == 0: \n",
+    "            k = 2\n",
+    "        a = 2*1j*Le*sigma[k-1]\n",
+    "        print(a == A_B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Ejercicio 16"
    ]
   },
