--- a/Parcial 3/EjerciciosParcial3.ipynb
+++ b/Parcial 3/EjerciciosParcial3.ipynb
@@ -413,14 +413,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(array([-0.5,  0.5,  1. ]), 1.0000000000000004)\n"
+      "(array([-0.5,  0.5,  1. ]), 1.0)\n"
      ]
     }
    ],
@@ -428,7 +428,7 @@
     "import numpy as np\n",
     "from numpy.linalg import inv\n",
     "\n",
-    "anz = np.array([0.1,0.1,0.1])\n",
+    "anz = np.array([0.4,0.4,0.8])\n",
     "Hamil = np.array([[1,2,-1],[1,0,1],[4,-4,5]])\n",
     "IHamil = inv(Hamil)\n",
     "\n",
