--- a/Parcial 4/Ejercicios PreParcial/Ejercicios.ipynb
+++ b/Parcial 4/Ejercicios PreParcial/Ejercicios.ipynb
@@ -76,16 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.37375"
+       "0.375"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,16 +94,11 @@
     "def probabilidad(N):\n",
     "   f =0\n",
     "   for i in range(N):\n",
-    "    c1 =np.random.choice([1,-1])\n",
-    "    c2 = np.random.choice([1,-1])\n",
-    "    c3 = np.random.choice([1,-1])\n",
-    "    c4 = np.random.choice([1,-1])\n",
-    "    if c1+c2+c3+c4 ==0:\n",
+    "    if np.sum(np.random.choice([1,-1], size =4)) ==0:\n",
     "        f+=1\n",
     "   return f/int(N)\n",
     "\n",
-    "\n",
-    "probabilidad(10**5)"
+    "round(probabilidad(10**5),3)\n"
    ]
   },
   {
